// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PropertyCard Snapshot > renders correctly with default props 1`] = `
<div>
  <div
    class="group cursor-pointer"
  >
    <div
      class="relative aspect-[4/3] overflow-hidden rounded-xl"
    >
      <img
        alt="Beautiful Beachfront Villa"
        class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105"
        loading="lazy"
        src="https://images.unsplash.com/photo-1566073771259-6a8506099945?w=500"
      />
      <button
        aria-label="Add to wishlist"
        class="absolute right-3 top-3 z-10"
      >
        <svg
          class="lucide lucide-heart h-6 w-6 drop-shadow-md transition-colors fill-foreground/30 text-card"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
          />
        </svg>
      </button>
      <button
        class="absolute left-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-left h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        class="absolute right-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-right h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
      <div
        class="absolute bottom-2 left-1/2 flex -translate-x-1/2 gap-1"
      >
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card"
        />
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card/50"
        />
      </div>
    </div>
    <div
      class="mt-3 space-y-1"
    >
      <div
        class="flex items-start justify-between"
      >
        <h3
          class="font-heading text-[15px] font-semibold text-foreground line-clamp-1"
        >
          Beautiful Beachfront Villa
        </h3>
        <div
          class="flex items-center gap-1 shrink-0 ml-2"
        >
          <svg
            class="lucide lucide-star h-3.5 w-3.5 fill-foreground text-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <span
            class="text-sm font-medium text-foreground"
          >
            4.8
          </span>
        </div>
      </div>
      <p
        class="text-sm text-muted-foreground"
      >
        , 
      </p>
      <div
        class="flex items-baseline gap-1.5"
      >
        <span
          class="font-heading text-[15px] font-bold text-foreground"
        >
          ₹15,000
        </span>
        <span
          class="text-sm text-muted-foreground"
        >
          night
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyCard Snapshot > renders low-rating property 1`] = `
<div>
  <div
    class="group cursor-pointer"
  >
    <div
      class="relative aspect-[4/3] overflow-hidden rounded-xl"
    >
      <img
        alt="Beautiful Beachfront Villa"
        class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105"
        loading="lazy"
        src="https://images.unsplash.com/photo-1566073771259-6a8506099945?w=500"
      />
      <button
        aria-label="Add to wishlist"
        class="absolute right-3 top-3 z-10"
      >
        <svg
          class="lucide lucide-heart h-6 w-6 drop-shadow-md transition-colors fill-foreground/30 text-card"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
          />
        </svg>
      </button>
      <button
        class="absolute left-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-left h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        class="absolute right-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-right h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
      <div
        class="absolute bottom-2 left-1/2 flex -translate-x-1/2 gap-1"
      >
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card"
        />
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card/50"
        />
      </div>
    </div>
    <div
      class="mt-3 space-y-1"
    >
      <div
        class="flex items-start justify-between"
      >
        <h3
          class="font-heading text-[15px] font-semibold text-foreground line-clamp-1"
        >
          Beautiful Beachfront Villa
        </h3>
        <div
          class="flex items-center gap-1 shrink-0 ml-2"
        >
          <svg
            class="lucide lucide-star h-3.5 w-3.5 fill-foreground text-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <span
            class="text-sm font-medium text-foreground"
          >
            3.2
          </span>
        </div>
      </div>
      <p
        class="text-sm text-muted-foreground"
      >
        , 
      </p>
      <div
        class="flex items-baseline gap-1.5"
      >
        <span
          class="font-heading text-[15px] font-bold text-foreground"
        >
          ₹15,000
        </span>
        <span
          class="text-sm text-muted-foreground"
        >
          night
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyCard Snapshot > renders premium property with high rating and reviews 1`] = `
<div>
  <div
    class="group cursor-pointer"
  >
    <div
      class="relative aspect-[4/3] overflow-hidden rounded-xl"
    >
      <img
        alt="Luxury 5-Star Resort"
        class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105"
        loading="lazy"
        src="https://images.unsplash.com/photo-1566073771259-6a8506099945?w=500"
      />
      <button
        aria-label="Add to wishlist"
        class="absolute right-3 top-3 z-10"
      >
        <svg
          class="lucide lucide-heart h-6 w-6 drop-shadow-md transition-colors fill-foreground/30 text-card"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
          />
        </svg>
      </button>
      <button
        class="absolute left-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-left h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        class="absolute right-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-right h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
      <div
        class="absolute bottom-2 left-1/2 flex -translate-x-1/2 gap-1"
      >
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card"
        />
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card/50"
        />
      </div>
    </div>
    <div
      class="mt-3 space-y-1"
    >
      <div
        class="flex items-start justify-between"
      >
        <h3
          class="font-heading text-[15px] font-semibold text-foreground line-clamp-1"
        >
          Luxury 5-Star Resort
        </h3>
        <div
          class="flex items-center gap-1 shrink-0 ml-2"
        >
          <svg
            class="lucide lucide-star h-3.5 w-3.5 fill-foreground text-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <span
            class="text-sm font-medium text-foreground"
          >
            4.9
          </span>
        </div>
      </div>
      <p
        class="text-sm text-muted-foreground"
      >
        , 
      </p>
      <div
        class="flex items-baseline gap-1.5"
      >
        <span
          class="font-heading text-[15px] font-bold text-foreground"
        >
          ₹50,000
        </span>
        <span
          class="text-sm text-muted-foreground"
        >
          night
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyCard Snapshot > renders with callback props 1`] = `
<div>
  <div
    class="group cursor-pointer"
  >
    <div
      class="relative aspect-[4/3] overflow-hidden rounded-xl"
    >
      <img
        alt="Beautiful Beachfront Villa"
        class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105"
        loading="lazy"
        src="https://images.unsplash.com/photo-1566073771259-6a8506099945?w=500"
      />
      <button
        aria-label="Add to wishlist"
        class="absolute right-3 top-3 z-10"
      >
        <svg
          class="lucide lucide-heart h-6 w-6 drop-shadow-md transition-colors fill-foreground/30 text-card"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
          />
        </svg>
      </button>
      <button
        class="absolute left-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-left h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        class="absolute right-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-right h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
      <div
        class="absolute bottom-2 left-1/2 flex -translate-x-1/2 gap-1"
      >
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card"
        />
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card/50"
        />
      </div>
    </div>
    <div
      class="mt-3 space-y-1"
    >
      <div
        class="flex items-start justify-between"
      >
        <h3
          class="font-heading text-[15px] font-semibold text-foreground line-clamp-1"
        >
          Beautiful Beachfront Villa
        </h3>
        <div
          class="flex items-center gap-1 shrink-0 ml-2"
        >
          <svg
            class="lucide lucide-star h-3.5 w-3.5 fill-foreground text-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <span
            class="text-sm font-medium text-foreground"
          >
            4.8
          </span>
        </div>
      </div>
      <p
        class="text-sm text-muted-foreground"
      >
        , 
      </p>
      <div
        class="flex items-baseline gap-1.5"
      >
        <span
          class="font-heading text-[15px] font-bold text-foreground"
        >
          ₹15,000
        </span>
        <span
          class="text-sm text-muted-foreground"
        >
          night
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyCard Snapshot > renders with group size and per-person pricing 1`] = `
<div>
  <div
    class="group cursor-pointer"
  >
    <div
      class="relative aspect-[4/3] overflow-hidden rounded-xl"
    >
      <img
        alt="Beautiful Beachfront Villa"
        class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105"
        loading="lazy"
        src="https://images.unsplash.com/photo-1566073771259-6a8506099945?w=500"
      />
      <button
        aria-label="Add to wishlist"
        class="absolute right-3 top-3 z-10"
      >
        <svg
          class="lucide lucide-heart h-6 w-6 drop-shadow-md transition-colors fill-foreground/30 text-card"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
          />
        </svg>
      </button>
      <button
        class="absolute left-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-left h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        class="absolute right-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-right h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
      <div
        class="absolute bottom-2 left-1/2 flex -translate-x-1/2 gap-1"
      >
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card"
        />
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card/50"
        />
      </div>
      <div
        class="absolute left-3 top-3 flex items-center gap-1 rounded-full bg-primary px-2.5 py-1"
      >
        <svg
          class="lucide lucide-users h-3 w-3 text-primary-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
        <span
          class="text-xs font-semibold text-primary-foreground"
        >
          Group Deal
        </span>
      </div>
    </div>
    <div
      class="mt-3 space-y-1"
    >
      <div
        class="flex items-start justify-between"
      >
        <h3
          class="font-heading text-[15px] font-semibold text-foreground line-clamp-1"
        >
          Beautiful Beachfront Villa
        </h3>
        <div
          class="flex items-center gap-1 shrink-0 ml-2"
        >
          <svg
            class="lucide lucide-star h-3.5 w-3.5 fill-foreground text-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <span
            class="text-sm font-medium text-foreground"
          >
            4.8
          </span>
        </div>
      </div>
      <p
        class="text-sm text-muted-foreground"
      >
        , 
      </p>
      <div
        class="flex items-baseline gap-1.5"
      >
        <span
          class="font-heading text-[15px] font-bold text-foreground"
        >
          ₹15,000
        </span>
        <span
          class="text-sm text-muted-foreground"
        >
          night
        </span>
        <span
          class="ml-auto text-sm font-semibold text-primary"
        >
          ₹3,750
          /person
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyCard Snapshot > renders with wishlisted state 1`] = `
<div>
  <div
    class="group cursor-pointer"
  >
    <div
      class="relative aspect-[4/3] overflow-hidden rounded-xl"
    >
      <img
        alt="Beautiful Beachfront Villa"
        class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105"
        loading="lazy"
        src="https://images.unsplash.com/photo-1566073771259-6a8506099945?w=500"
      />
      <button
        aria-label="Remove from wishlist"
        class="absolute right-3 top-3 z-10"
      >
        <svg
          class="lucide lucide-heart h-6 w-6 drop-shadow-md transition-colors fill-primary text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
          />
        </svg>
      </button>
      <button
        class="absolute left-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-left h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        class="absolute right-2 top-1/2 -translate-y-1/2 rounded-full bg-card/80 p-1 opacity-0 transition-opacity group-hover:opacity-100"
      >
        <svg
          class="lucide lucide-chevron-right h-4 w-4 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
      <div
        class="absolute bottom-2 left-1/2 flex -translate-x-1/2 gap-1"
      >
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card"
        />
        <div
          class="h-1.5 w-1.5 rounded-full transition-colors bg-card/50"
        />
      </div>
    </div>
    <div
      class="mt-3 space-y-1"
    >
      <div
        class="flex items-start justify-between"
      >
        <h3
          class="font-heading text-[15px] font-semibold text-foreground line-clamp-1"
        >
          Beautiful Beachfront Villa
        </h3>
        <div
          class="flex items-center gap-1 shrink-0 ml-2"
        >
          <svg
            class="lucide lucide-star h-3.5 w-3.5 fill-foreground text-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <span
            class="text-sm font-medium text-foreground"
          >
            4.8
          </span>
        </div>
      </div>
      <p
        class="text-sm text-muted-foreground"
      >
        , 
      </p>
      <div
        class="flex items-baseline gap-1.5"
      >
        <span
          class="font-heading text-[15px] font-bold text-foreground"
        >
          ₹15,000
        </span>
        <span
          class="text-sm text-muted-foreground"
        >
          night
        </span>
      </div>
    </div>
  </div>
</div>
`;
